# programming

./: .gitattributes  .gitignore  .gitmodules  Geometry-no-hierarchy.hs  boost_useage.cpp  bootstrap.sh  break_evaluation.c  c4-syntax-in-functions.hs  c5-recursion.hs  emulate_recursion.py  fish_countdown.py  get_shell.c  glacier_operations.md  glacier_operations.txt  install_docker_ubuntu_16.sh  learning.txt  paramiko_ssh.py  pomodoro.py  qsort-useage.c  rename_list.txt  today_i_learned.txt  vm-setup.sh  vm_setup.sh
advent-of-code/: day-1-1-inverse-captcha.hs  day-1-2-inverse-captcha.hs  day-10-1-knot-hash.py  day-10-2-knot-hash.py  day-11-2-hex-ed.py  day-12-2-digital-plumber.py  day-13-2-packet-scanners.py  day-14-2-disk-defragmentation.py  day-15-2-dueling-generators.py  day-16-1-permutation-promenade.py  day-16-2-permutation-promenade.py  day-17-1-spinlock.py  day-17-2-spinlock.py  day-18-1-duet.py  day-18-2-duet.py  day-19-1-a-series-of-tubes.py  day-2-1-corruption-checksum.hs  day-2-2-corruption-checksum.hs  day-4-1-high-entropy-passphrases.py  day-6-1-memory-reallocation.py  day-7-2-recursive-circus.py  day-8-1-i-heard-you-like-registers.py  day-8-2-i-heard-you-like-registers.py  day-9-2-stream-processing.py  day_3_2_spiral_memory.py  day_3_2_spiral_memory_test.py  get-input.py  setup.sh
advent_of_code/: day-12-1-digital-plumber.py  day_13_2_packet_scanners_old_run.txt  day_14_1_disk_defragmentation.py  day_20_1_particle_swarm.py  day_3_1_spiral_memory.txt  day_3_2_spiral_memory.py  day_4_2_high_entropy_passphrases.py  day_9_1_stream_processing.py  merged.py
advent_of_code/2019/cpp/: CMakeLists.txt  README.md
advent_of_code/2019/cpp/include/advent_of_code_2019/: day_1.hpp  day_2.hpp  days.hpp  utils.hpp
advent_of_code/2019/cpp/src/: day_1.cpp  day_2.cpp  main.cpp  utils.cpp
algorithms/: bipartite_matching.py  experimental.py
concurrent_haskell/: producer_consumer.hs  zigprint.hs
datastructures_and_algorithms/: Ford_Fulkerson.py  bipartite_matching.py  cc1_1_unique.py  cc1_7_rotate_matrix.py
gamebots/: play.py
junkyard/: Data.List  any_flaw.py  any_flaw2.py  fannar.in  fannar64.in  fannar_decrypt.py  icectf_garfeld.py  icectf_garfield2.py  mess.txt  port_scanner.py  sock_test_client.py  sock_test_server.py  spylint_sequence.py
junkyard/google_test/: CMakeLists.txt
junkyard/google_test/src/: factorial_unittest.cpp
kattis/: README.md
learn-you-a-haskell/: c06-higher-order-functions.hs  c07-modules.hs  c09-exception.hs  c09-lines-less-than-ten.hs  c10-heathrow-to-london.hs  c10-reverse-polish-notation-calculator-try1.hs  c10-reverse-polish-notation-calculator.hs  (+11 more)
(+409 files in other folders)
